generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id             String          @id @default(cuid())
  email          String          @unique
  password       String
  name           String
  avatarUrl      String?
  role           UserRole        @default(USER)
  tokenBalance   Int             @default(0)
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  blogComments   BlogComment[]
  blogLikes      BlogLike[]
  blogPosts      BlogPost[]
  blogSaves      BlogSave[]
  orders         Order[]
  reviews        Review[]
  shop           Shop?
  tokenPurchases TokenPurchase[]
  transactions   Transaction[]
  virtualModels  VirtualModel[]

  @@index([role])
}

model Shop {
  id            String     @id @default(cuid())
  name          String
  slug          String     @unique
  logoUrl       String?    @db.Text
  bannerUrl     String?    @db.Text
  avatarImage   String?    @db.LongText
  description   String?    @db.LongText
  address       String?
  phone         String?
  email         String?
  website       String?
  openingHours  Json?
  policies      Json?
  socialMedia   Json?
  status        ShopStatus @default(PENDING)
  averageRating Float      @default(0)
  totalSales    Int        @default(0)
  totalProducts Int        @default(0)
  featured      Boolean    @default(false)
  ownerId       String     @unique
  createdAt     DateTime   @default(now())
  updatedAt     DateTime   @updatedAt
  blogPosts     BlogPost[]
  orders        Order[]
  products      Product[]
  reviews       Review[]
  owner         User       @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  @@index([slug])
  @@index([status])
  @@index([featured])
}

model Category {
  id               String            @id @default(cuid())
  name             String
  slug             String            @unique
  imageUrl         String?
  parentId         String?
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  parent           Category?         @relation("CategoryHierarchy", fields: [parentId], references: [id])
  children         Category[]        @relation("CategoryHierarchy")
  productCategories ProductCategory[]

  @@index([slug])
  @@index([parentId])
}

model Product {
  id               String            @id @default(cuid())
  title            String
  description      String            @db.LongText
  shortDescription String?
  images           Json
  basePrice        Decimal           @db.Decimal(10, 2)
  salePrice        Decimal?          @db.Decimal(10, 2)
  sku              String            @unique
  stockQuantity    Int               @default(0)
  weight           Decimal?          @db.Decimal(8, 3)
  dimensions       Json?
  material         String?
  brand            String?
  tags             Json?
  specifications   Json?
  features         Json?
  shippingInfo     Json?
  warranty         String?
  returnPolicy     String?
  status           ProductStatus     @default(DRAFT)
  isFeatured       Boolean           @default(false)
  isNew            Boolean           @default(true)
  viewCount        Int               @default(0)
  rating           Float             @default(0)
  reviewCount      Int               @default(0)
  shopId           String
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  orderItems       OrderItem[]
  shop             Shop              @relation(fields: [shopId], references: [id], onDelete: Cascade)
  variants         ProductVariant[]
  reviews          Review[]
  productCategories ProductCategory[]

  @@index([shopId])
  @@index([status])
  @@index([isFeatured])
  @@index([sku])
  @@index([rating])
}

model Review {
  id        String   @id @default(cuid())
  rating    Int
  comment   String?  @db.LongText
  images    Json
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  productId String?
  product   Product? @relation(fields: [productId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  shopId    String?
  shop      Shop?    @relation(fields: [shopId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  orderId   String?  @unique
  order     Order?   @relation(fields: [orderId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([productId])
  @@index([shopId])
  @@index([orderId])
}

model ProductCategory {
  id         String   @id @default(cuid())
  productId  String
  categoryId String
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  product    Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@unique([productId, categoryId])
  @@index([productId])
  @@index([categoryId])
}

model ProductVariant {
  id         String      @id @default(cuid())
  productId  String
  name       String
  price      Decimal?    @db.Decimal(10, 2)
  stock      Int         @default(0)
  sku        String      @unique
  attributes Json
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  orderItems OrderItem[]
  product    Product     @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId])
}

model Order {
  id              String        @id @default(cuid())
  buyerId         String
  shopId          String
  totalAmount     Decimal       @db.Decimal(10, 2)
  shippingAddress Json
  status          OrderStatus   @default(PENDING)
  paymentStatus   PaymentStatus @default(UNPAID)
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  buyer           User          @relation(fields: [buyerId], references: [id])
  shop            Shop          @relation(fields: [shopId], references: [id])
  items           OrderItem[]
  review          Review?

  @@index([buyerId])
  @@index([shopId])
}

model OrderItem {
  id               String          @id @default(cuid())
  orderId          String
  productId        String
  productVariantId String?
  quantity         Int
  price            Decimal         @db.Decimal(10, 2)
  createdAt        DateTime        @default(now())
  updatedAt        DateTime        @updatedAt
  order            Order           @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product          Product         @relation(fields: [productId], references: [id])
  productVariant   ProductVariant? @relation(fields: [productVariantId], references: [id])

  @@index([orderId])
  @@index([productId])
  @@index([productVariantId])
}

model Transaction {
  id          String            @id @default(cuid())
  userId      String
  amount      Decimal           @db.Decimal(10, 2)
  type        TransactionType
  status      TransactionStatus @default(PENDING)
  description String?
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt
  user        User              @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([status])
}



model TokenPurchase {
  id              String              @id @default(cuid())
  userId          String
  paypalOrderId   String              @unique
  amount          Decimal             @db.Decimal(10, 2)
  tokens          Int
  status          TokenPurchaseStatus @default(pending)
  createdAt       DateTime            @default(now())
  user            User                @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model CostTracking {
  id        String   @id @default(cuid())
  userId    String?
  service   String
  operation String
  cost      Int      @default(0)
  details   String?
  createdAt DateTime @default(now())

  @@index([userId, service])
}

model VirtualModel {
  id                   String   @id @default(cuid())
  userId               String?
  sessionId            String?
  avatarName           String
  avatarImage          String?  @db.LongText
  isPublic             Boolean  @default(false)
  height               Float
  weight               Float
  gender               String
  hairColor            String
  hairStyle            String
  bodyShape            String?
  skinTone             String?
  eyeColor             String?
  faceShape            String?
  beardStyle           String?
  tattoos              String?
  piercings            String?
  clothingStyle        String?
  accessories          String?
  footwearType         String?
  colorPalette         String?
  ageAppearance        Int?
  bodyProportionPreset String?
  muscleLevel          Int?
  fatLevel             Int?
  shoulderWidth        Float?
  waistSize            Float?
  hipSize              Float?
  legLength            Float?
  createdAt            DateTime @default(now())
  updatedAt            DateTime @updatedAt
  user                 User?    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([sessionId])
}

model BlogPost {
  id             String         @id @default(cuid())
  authorId       String
  shopId         String?
  title          String
  slug           String         @unique
  excerpt        String?
  content        String         @db.LongText
  featuredImage  String?
  media          Json
  category       String?
  tags           Json
  status         BlogPostStatus @default(PUBLISHED)
  isFeatured     Boolean        @default(false)
  readingTime    Int?
  seoTitle       String?
  seoDescription String?
  seoKeywords    String?
  likesCount     Int            @default(0)
  savesCount     Int            @default(0)
  commentsCount  Int            @default(0)
  viewCount      Int            @default(0)
  publishedAt    DateTime?
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt
  comments       BlogComment[]
  likes          BlogLike[]
  author         User           @relation(fields: [authorId], references: [id], onDelete: Cascade)
  shop           Shop?          @relation(fields: [shopId], references: [id])
  saves          BlogSave[]

  @@index([authorId])
  @@index([shopId])
  @@index([status])
  @@index([category])
  @@index([slug])
  @@index([isFeatured])
  @@index([publishedAt])
}

model BlogComment {
  id        String   @id @default(cuid())
  postId    String
  userId    String
  content   String   @db.LongText
  media     Json
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  post      BlogPost @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([postId])
  @@index([userId])
}

model BlogLike {
  id        String   @id @default(cuid())
  postId    String
  userId    String
  createdAt DateTime @default(now())
  post      BlogPost @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([postId, userId])
  @@index([userId])
}

model BlogSave {
  id        String   @id @default(cuid())
  postId    String
  userId    String
  createdAt DateTime @default(now())
  post      BlogPost @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([postId, userId])
  @@index([userId])
}

enum UserRole {
  ADMIN
  USER
  SELLER
}

enum ShopStatus {
  PENDING
  ACTIVE
  SUSPENDED
}

enum ProductStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

enum OrderStatus {
  PENDING
  PROCESSING
  SHIPPED
  DELIVERED
  CANCELLED
}

enum PaymentStatus {
  UNPAID
  PAID
  REFUNDED
}

enum TransactionType {
  DEPOSIT
  PURCHASE
  REFUND
}

enum TransactionStatus {
  PENDING
  SUCCESS
  FAILED
}

enum TokenPurchaseStatus {
  pending
  completed
  failed
}

enum BlogPostStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}
