@startuml
title Biểu đồ Class (Domain Models)
left to right direction

class User <<entity>> {
  +id : String {PK}
  +email : String {UNIQUE}
  +password : String
  +name : String
  +avatarUrl : String?
  +role : UserRole
  +tokenBalance : Int
  +createdAt : DateTime
  +updatedAt : DateTime
}

class Shop <<entity>> {
  +id : String {PK}
  +name : String
  +slug : String {UNIQUE}
  +logoUrl : String?
  +bannerUrl : String?
  +description : String?
  +status : ShopStatus
  +averageRating : Float
  +totalSales : Int
  +ownerId : String {UNIQUE, FK -> User.id}
  +createdAt : DateTime
  +updatedAt : DateTime
}

class Category <<entity>> {
  +id : String {PK}
  +name : String
  +slug : String {UNIQUE}
  +imageUrl : String?
  +parentId : String? {FK -> Category.id}
  +createdAt : DateTime
  +updatedAt : DateTime
}

class Product <<entity>> {
  +id : String {PK}
  +title : String
  +description : String
  +images : Json
  +basePrice : Decimal(10,2)
  +status : ProductStatus
  +shopId : String {FK -> Shop.id}
  +categoryId : String {FK -> Category.id}
  +createdAt : DateTime
  +updatedAt : DateTime
}

class ProductVariant <<entity>> {
  +id : String {PK}
  +productId : String {FK -> Product.id}
  +name : String
  +price : Decimal(10,2)?
  +stock : Int
  +sku : String {UNIQUE}
  +attributes : Json
  +createdAt : DateTime
  +updatedAt : DateTime
}

class Order <<entity>> {
  +id : String {PK}
  +buyerId : String {FK -> User.id}
  +shopId : String {FK -> Shop.id}
  +totalAmount : Decimal(10,2)
  +shippingAddress : Json
  +status : OrderStatus
  +paymentStatus : PaymentStatus
  +createdAt : DateTime
  +updatedAt : DateTime
}

class OrderItem <<entity>> {
  +id : String {PK}
  +orderId : String {FK -> Order.id}
  +productId : String {FK -> Product.id}
  +productVariantId : String? {FK -> ProductVariant.id}
  +quantity : Int
  +price : Decimal(10,2)
  +createdAt : DateTime
  +updatedAt : DateTime
}

class Transaction <<entity>> {
  +id : String {PK}
  +userId : String {FK -> User.id}
  +amount : Decimal(10,2)
  +type : TransactionType
  +status : TransactionStatus
  +description : String?
  +createdAt : DateTime
  +updatedAt : DateTime
}

class Review <<entity>> {
  +id : String {PK}
  +rating : Int
  +comment : String?
  +images : Json
  +userId : String {FK -> User.id}
  +productId : String {FK -> Product.id}
  +createdAt : DateTime
  +updatedAt : DateTime
}

class TokenPurchase <<entity>> {
  +id : String {PK}
  +userId : String {FK -> User.id}
  +stripePaymentId : String {UNIQUE}
  +amount : Decimal(10,2)
  +tokens : Int
  +status : TokenPurchaseStatus
  +createdAt : DateTime
}

class CostTracking <<entity>> {
  +id : String {PK}
  +userId : String?
  +service : String
  +operation : String
  +cost : Int
  +details : String?
  +createdAt : DateTime
}

class VirtualModel <<entity>> {
  +id : String {PK}
  +userId : String? {FK -> User.id}
  +sessionId : String?
  +avatarName : String
  +avatarImage : String?
  +isPublic : Boolean
  +height : Float
  +weight : Float
  +gender : String
  +hairColor : String
  +hairStyle : String
  +bodyShape : String?
  +skinTone : String?
  +eyeColor : String?
  +faceShape : String?
  +beardStyle : String?
  +tattoos : String?
  +piercings : String?
  +clothingStyle : String?
  +accessories : String?
  +footwearType : String?
  +colorPalette : String?
  +ageAppearance : Int?
  +bodyProportionPreset : String?
  +muscleLevel : Int?
  +fatLevel : Int?
  +shoulderWidth : Float?
  +waistSize : Float?
  +hipSize : Float?
  +legLength : Float?
  +createdAt : DateTime
  +updatedAt : DateTime
}

class BlogPost <<entity>> {
  +id : String {PK}
  +authorId : String {FK -> User.id}
  +title : String
  +content : LongText
  +media : Json
  +category : String?
  +tags : Json
  +status : BlogPostStatus
  +likesCount : Int
  +savesCount : Int
  +commentsCount : Int
  +createdAt : DateTime
  +updatedAt : DateTime
}

class BlogComment <<entity>> {
  +id : String {PK}
  +postId : String {FK -> BlogPost.id}
  +userId : String {FK -> User.id}
  +content : LongText
  +media : Json
  +createdAt : DateTime
  +updatedAt : DateTime
}

class BlogLike <<entity>> {
  +id : String {PK}
  +postId : String {FK -> BlogPost.id}
  +userId : String {FK -> User.id}
  +createdAt : DateTime
}

class BlogSave <<entity>> {
  +id : String {PK}
  +postId : String {FK -> BlogPost.id}
  +userId : String {FK -> User.id}
  +createdAt : DateTime
}

User "1" -- "1" Shop : owns
User "1" -- "*" Order : makes
Shop "1" -- "*" Product : contains
Shop "1" -- "*" Order : fulfills
Category "1" -- "*" Product : categorizes
Category "1" -- "*" Category : contains (children)
Product "1" -- "*" ProductVariant : has
Product "1" -- "*" Review : has
Product "1" -- "*" OrderItem : appears_in
Order "1" -- "*" OrderItem : includes
User "1" -- "*" Review : writes
User "1" -- "*" Transaction : has
User "1" -- "*" TokenPurchase : purchases
User "1" -- "*" CostTracking : logs
User "1" -- "*" VirtualModel : creates
User "1" -- "*" BlogPost : authors
BlogPost "1" -- "*" BlogComment : has comments
BlogPost "1" -- "*" BlogLike : has likes
BlogPost "1" -- "*" BlogSave : has saves
User "1" -- "*" BlogComment : comments
User "1" -- "*" BlogLike : likes
User "1" -- "*" BlogSave : saves

@enduml
